build: downgrade xnat version